creato helper per queries choice

--- a/ServerHost/ServerHost.csproj
+++ b/ServerHost/ServerHost.csproj
@@ -17,4 +17,8 @@
 		<ProjectReference Include="..\TDatabase\TDatabase.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Managers\" />
+	</ItemGroup>
+
 </Project>
