--- a/ServerHost/ServerHost.csproj
+++ b/ServerHost/ServerHost.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AXT_WebComunication" Version="1.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
@@ -18,6 +19,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Folder Include="Controllers\" />
 	  <Folder Include="Managers\" />
 	</ItemGroup>
 
