componenente per il resize della view

--- a/ClientWebApp/ClientWebApp.csproj
+++ b/ClientWebApp/ClientWebApp.csproj
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Components\" />
+    <Folder Include="Components\Choices\" />
   </ItemGroup>
 
 </Project>
