--- a/AppMAUI/AppMAUI.csproj
+++ b/AppMAUI/AppMAUI.csproj
@@ -68,4 +68,8 @@
       <ProjectReference Include="..\ConstructionSiteLibrary\ConstructionSiteLibrary.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="wwwroot\images\" />
+    </ItemGroup>
+
 </Project>
