home foto, permessi mac

--- a/AppMAUI/AppMAUI.csproj
+++ b/AppMAUI/AppMAUI.csproj
@@ -20,6 +20,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <EnableDefaultCssItems>false</EnableDefaultCssItems>
         <Nullable>enable</Nullable>
+        <MtouchDebug>true</MtouchDebug>
 
         <!-- Display name -->
         <ApplicationTitle>AppMAUI</ApplicationTitle>
