--- a/AppMAUI/Platforms/MacCatalyst/Info.plist
+++ b/AppMAUI/Platforms/MacCatalyst/Info.plist
@@ -15,6 +15,14 @@
     <array>
         <integer>2</integer>
     </array>
+     <key>NSCameraUsageDescription</key>
+        <string>This app needs access to the camera to take photos.</string>
+        <key>NSMicrophoneUsageDescription</key>
+        <string>This app needs access to microphone for taking videos.</string>
+        <key>NSPhotoLibraryAddUsageDescription</key>
+        <string>This app needs access to the photo gallery for picking photos and videos.</string>
+        <key>NSPhotoLibraryUsageDescription</key>
+        <string>This app needs access to photos gallery for picking photos and videos.</string>
     <key>UIRequiredDeviceCapabilities</key>
     <array>
         <string>arm64</string>
