aggiunto componente per test indexedDB + file javascript

--- a/ConstructionSiteLibrary/ConstructionSiteLibrary.csproj
+++ b/ConstructionSiteLibrary/ConstructionSiteLibrary.csproj
@@ -6,6 +6,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Content Remove="wwwroot\IndexedDB.js" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <SupportedPlatform Include="browser" />
@@ -24,6 +28,14 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Shared\Shared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="wwwroot\IndexedDB.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\IndexedDB.js" />
   </ItemGroup>
 
 </Project>
