implementazioni metodi per lavorare su indexedDB

--- a/AppMAUI/AppMAUI.csproj
+++ b/AppMAUI/AppMAUI.csproj
@@ -58,6 +58,10 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Content Remove="wwwroot\indexedDB.js" />
+    </ItemGroup>
+
+    <ItemGroup>
         <PackageReference Include="Microsoft.Maui.Controls" Version="8.0.21" />
         <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.21" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="8.0.21" />
@@ -70,6 +74,10 @@
 
     <ItemGroup>
       <Folder Include="wwwroot\images\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Include="wwwroot\indexedDB.js" />
     </ItemGroup>
 
 </Project>
