--- a/AppMAUI/Platforms/iOS/Info.plist
+++ b/AppMAUI/Platforms/iOS/Info.plist
@@ -21,6 +21,12 @@
         <string>This app needs access to the photo gallery for picking photos and videos.</string>
         <key>NSPhotoLibraryUsageDescription</key>
         <string>This app needs access to photos gallery for picking photos and videos.</string>
+
+        <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+        <string>Can we use your location at all times?</string>
+        <key>NSLocationWhenInUseUsageDescription</key>
+        <string>Can we use your location when your app is being used?</string>
+
         <key>UISupportedInterfaceOrientations</key>
         <array>
             <string>UIInterfaceOrientationPortrait</string>
