--- a/ConstructionSiteLibrary/ConstructionSiteLibrary.csproj
+++ b/ConstructionSiteLibrary/ConstructionSiteLibrary.csproj
@@ -7,7 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Components/Documents/Compilation/FormQuestionAdditionalNotesList.razor.css" />
+  </ItemGroup>
+
+  <ItemGroup>
     <_ContentIncludedByDefault Remove="wwwroot\css\rootDefault.css" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Components/Documents/Compilation/FormQuestionAdditionalNotesList.razor.css" />
   </ItemGroup>
 
 
