--- a/ConstructionSiteLibrary/ConstructionSiteLibrary.csproj
+++ b/ConstructionSiteLibrary/ConstructionSiteLibrary.csproj
@@ -13,8 +13,12 @@
 
   <ItemGroup>
     <PackageReference Include="AXT_WebComunication" Version="1.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="8.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.7" />
-    <PackageReference Include="Radzen.Blazor" Version="4.34.3" />
+    <PackageReference Include="Radzen.Blazor" Version="5.0.2" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.0.1" />
+    <PackageReference Include="System.Text.Json" Version="8.0.4" />
+    <PackageReference Include="WebStorageManagement" Version="1.0.1" />
   </ItemGroup>
 
   <ItemGroup>
