--- a/ClientWebApp/ClientWebApp.csproj
+++ b/ClientWebApp/ClientWebApp.csproj
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Update="wwwroot\default.png">
+    <Content Update="wwwroot\default.jpg">
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
